# snx-rs-gui

./: .gitignore  Cargo.toml  LICENSE  README.md
src/: main.rs  model.rs  style.css
